Include deleted revision in recent_changes
https://github.com/inblockio/mediawiki-extensions-Aqua/issues/383
